# nitrox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
examples/: basic_usage.py
nitrox/: __init__.py  cli.py  core.py  exceptions.py  ffmpeg.py  info.py
tests/: __init__.py  test_ffmpeg.py  test_info.py  test_media.py
